crates/au-cli/tests/it/snapshots/it__scenarios__body-use-repetition.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 25,
                        "line_col": {
                          "end": {
                            "col": 26,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-use-repetition/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-use-repetition"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-use-repetition"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-use-repetition/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 96,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 88
            },
            "text": "Block"
          },
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 153,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 12
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 144
            },
            "text": "Middle"
          },
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 203,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 16
                },
                "start": {
                  "col": 1,
                  "line": 15
                }
              },
              "start": 195
            },
            "text": "Block"
          }
        ],
        "claim": [
          "double"
        ],
        "closure": [
          "double",
          "parent"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "parent",
                "origin_path": "<root>/scenarios/body-use-repetition/type/parent.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "tag",
            "origins": [
              {
                "name": "double",
                "origin_path": "<root>/scenarios/body-use-repetition/type/double.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 69,
                        "line_col": {
                          "end": {
                            "col": 53,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 30
                      },
                      "file": "<root>/scenarios/body-use-repetition/twice.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Two Block sections bracket one Middle"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Two Block sections bracket one Middle"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 82,
                        "line_col": {
                          "end": {
                            "col": 13,
                            "line": 4
                          },
                          "start": {
                            "col": 6,
                            "line": 4
                          }
                        },
                        "start": 75
                      },
                      "file": "<root>/scenarios/body-use-repetition/twice.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "example"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "example"
                }
              }
            ],
            "field": "tag"
          }
        ],
        "file": "<root>/scenarios/body-use-repetition/twice.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Block",
            "optional": false,
            "path": [
              "Block"
            ],
            "present": true,
            "span": {
              "end": 96,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 88
            }
          },
          {
            "depth": 1,
            "name": "Middle",
            "optional": false,
            "path": [
              "Middle"
            ],
            "present": true,
            "span": {
              "end": 153,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 12
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 144
            }
          },
          {
            "depth": 1,
            "name": "Block",
            "optional": false,
            "path": [
              "Block"
            ],
            "present": true,
            "span": {
              "end": 96,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 88
            }
          }
        ]
      }
    ]
  }
}
