crates/au-cli/tests/it/snapshots/it__scenarios__body-wikilink-block-id-typed-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 40,
                        "line_col": {
                          "end": {
                            "col": 41,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-wikilink-block-id-typed-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-wikilink-block-id-typed-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 83,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            },
            "text": "Why"
          },
          {
            "kind": "wikilink",
            "parsed": {
              "anchor": null,
              "block_id": {
                "id": "extractor-stability",
                "referent": true
              },
              "commit": null,
              "field": "assumptions",
              "repo": null,
              "target": "research-notes"
            },
            "raw": "research-notes^^extractor-stability:assumptions",
            "span": {
              "end": 171,
              "line_col": {
                "end": {
                  "col": 88,
                  "line": 9
                },
                "start": {
                  "col": 37,
                  "line": 9
                }
              },
              "start": 120
            }
          },
          {
            "content": "type:",
            "kind": "inline_code",
            "span": {
              "end": 192,
              "line_col": {
                "end": {
                  "col": 20,
                  "line": 10
                },
                "start": {
                  "col": 13,
                  "line": 10
                }
              },
              "start": 185
            }
          },
          {
            "content": "assumption",
            "kind": "inline_code",
            "span": {
              "end": 208,
              "line_col": {
                "end": {
                  "col": 36,
                  "line": 10
                },
                "start": {
                  "col": 24,
                  "line": 10
                }
              },
              "start": 196
            }
          },
          {
            "content": "assumption&[+]",
            "kind": "inline_code",
            "span": {
              "end": 246,
              "line_col": {
                "end": {
                  "col": 74,
                  "line": 10
                },
                "start": {
                  "col": 58,
                  "line": 10
                }
              },
              "start": 230
            }
          },
          {
            "content": "note",
            "kind": "inline_code",
            "span": {
              "end": 285,
              "line_col": {
                "end": {
                  "col": 30,
                  "line": 11
                },
                "start": {
                  "col": 24,
                  "line": 11
                }
              },
              "start": 279
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-wikilink-block-id-typed-clean/type/decision.type.yaml",
                "required": false,
                "shape": "assumption&[+]"
              }
            ],
            "required": false,
            "shape": "assumption&[+]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-wikilink-block-id-typed-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 171,
                        "line_col": {
                          "end": {
                            "col": 88,
                            "line": 9
                          },
                          "start": {
                            "col": 37,
                            "line": 9
                          }
                        },
                        "start": 120
                      },
                      "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Why"
                      }
                    ],
                    "surface": "body_wikilink",
                    "value": {
                      "anchor": null,
                      "block_id": {
                        "id": "extractor-stability",
                        "referent": true
                      },
                      "kind": "reference",
                      "target": "research-notes"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": {
                    "id": "extractor-stability",
                    "referent": true
                  },
                  "kind": "reference",
                  "target": "research-notes"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": true,
            "span": {
              "end": 83,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            }
          }
        ]
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 127,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 116
            },
            "text": "Findings"
          },
          {
            "body": "type: assumption\ndescription: \"Extractor protocol is stable through Q3\"\n",
            "info": "yaml [:assumptions]",
            "kind": "fenced_block",
            "span": {
              "end": 248,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 14
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 128
            },
            "trailing_block_id": "extractor-stability"
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/body-wikilink-block-id-typed-clean/type/note.type.yaml",
                "required": false,
                "shape": "assumption&[]"
              }
            ],
            "required": false,
            "shape": "assumption&[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/body-wikilink-block-id-typed-clean/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 248,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 14
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 128
                      },
                      "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/research-notes.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Findings"
                      }
                    ],
                    "surface": "body_fence",
                    "value": {
                      "fields": [
                        {
                          "field": "description",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "Extractor protocol is stable through Q3"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "description",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "Extractor protocol is stable through Q3"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 97,
                        "line_col": {
                          "end": {
                            "col": 83,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/research-notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Research notes — the host file is a plain note, not an assumption"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Research notes — the host file is a plain note, not an assumption"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-wikilink-block-id-typed-clean/research-notes.md",
        "section_presence": null
      }
    ]
  }
}
